# cadis-global

./: .gitignore  README.md  pyproject.toml
cadis_global/: __init__.py  cgd_binary.py  cgd_bootstrap.py  cgd_world_resolver.py  global_lookup.py  router.py  version.py  world_resolver.py
cadis_global/data/: CGD_SPEC.md
release/cadis-global-dataset/: CGD_SPEC.md  README.md
release/cadis-global-dataset/v0.1.0/ne.global/v0.1.0/: SHA256SUMS  manifest.cdn-example.json  manifest.local-build.json
