[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadis-global"
version = "0.1.0"
description = "Public world-orchestration layer for Cadis runtime dispatch"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cadis" }]
license = { text = "MIT" }
dependencies = [
  "cadis-runtime>=0.1.2",
  "cadis-cdn>=0.1.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["cadis_global"]
include-package-data = true

[tool.setuptools.package-data]
cadis_global = ["data/*.cgd"]
